tests/positive/invoke_direct/input.ci
// Test: cimple <file> works without the 'run' sub-command
void main() {
    print("direct\n");
}
