tests/negative/runtime/substr_negative_length/input.ci
void main() {
    print(substr("abc", 0, -1) + "\n");
}
